--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,17 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@mocks/*": [
+        "./src/_tests/mocks/*"
+      ],
+      "@tests/*": [
+        "./src/_tests/*"
       ]
     }
   },
