--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@expo-google-fonts/quicksand": "^0.4.0",
     "expo": "~53.0.13",
     "expo-font": "~13.3.1",
     "expo-router": "~5.1.1",
@@ -25,6 +26,7 @@
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0"
   },
   "devDependencies": {
