--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.4.0",
+    "class-variance-authority": "^0.7.1",
     "expo": "~53.0.13",
     "expo-font": "~13.3.1",
     "expo-router": "~5.1.1",
@@ -28,8 +29,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.0",
-    "react-native-web": "~0.20.0",
-    "tailwind-variants": "^1.0.0"
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
