--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "strict": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/@types"
+    ],
     "paths": {
       "@/*": [
         "./src/*"
@@ -21,6 +25,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
+    "nativewind-env.d.ts",
+    "src/@types/**/*.d.ts"
   ]
 }
