fix: correção dos testes após reestruturação do projeto
- Configuração do mapeamento de módulos no Jest para reconhecer aliases (@app, @/, @mocks, @tests)
- Correção do mock do react-native-svg no setup.ts para evitar conflitos de variáveis
- Implementação de importação condicional do CSS global para evitar problemas nos testes
- Atualização do babel.config.test.js com presets do NativeWind
- Exclusão da pasta core/config/nativewind dos testes e cobertura
- Todos os testes passando: 4 suites, 17 testes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,14 @@
       "@/*": [
         "./src/*"
       ],
+      "@app/*": [
+        "./app/*"
+      ],
       "@mocks/*": [
-        "./src/_tests/mocks/*"
+        "./src/__tests__/mocks/*"
       ],
       "@tests/*": [
-        "./src/_tests/*"
+        "./src/__tests__/*"
       ]
     }
   },
