--- a/package.json
+++ b/package.json
@@ -2,49 +2,78 @@
   "name": "expo-boilerplate",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=23",
+    "yarn": "1.22.X"
+  },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "prebuild": "npx expo prebuild",
+    "start": "expo start --reset-cache",
+    "start:fast": "expo start",
+    "start:clean": "expo start 2>&1 | node scripts/filter-metro-warnings.js",
+    "android": "expo run:android",
+    "android:fast": "expo run:android --no-build-cache",
+    "android:clean": "cd android && ./gradlew clean && cd .. && expo run:android",
+    "android:release": "expo run:android --variant release",
+    "android:storybook": "EXPO_PUBLIC_STORYBOOK=true npx expo run:android",
+    "android:log": "adb logcat '*:S' ReactNative:V ReactNativeJS:V",
+    "ios": "expo run:ios",
+    "ios:release": "expo run:ios --configuration Release",
+    "expo:check": "npx expo install --check",
+    "expo:fix": "npx expo install --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" \".tests/**/*.{js,jsx,ts,tsx}\"",
+    "pre-push": "yarn tsc && yarn lint:fix && yarn lint && yarn test",
     "web": "expo start --web",
     "lint": "expo lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "reset": "rm -rf ios && rm -rf android && rm -rf node_modules && rm -rf .expo && rm -rf yarn.lock && rm -rf package-lock.json && watchman watch-del-all && rm -rf .yarn",
+    "clear": "watchman watch-del-all && rm -rf ios && rm -rf android && rm -rf .expo",
+    "clear:metro": "rm -rf /tmp/metro-cache && rm -rf node_modules/.cache"
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.4.0",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "expo": "~53.0.13",
     "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
     "expo-router": "~5.1.1",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
+    "qs": "^6.11.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.53.1",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
-    "react-native-web": "~0.20.0"
+    "react-native-svg": "15.11.2",
+    "react-native-web": "~0.20.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@faker-js/faker": "^9.8.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
+    "babel-loader": "^8.3.0",
     "eslint": "^9.29.0",
     "eslint-config-expo": "^9.2.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.3",
     "jest-expo": "^53.0.7",
+    "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "19.0.0",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.8.3"
   },
   "private": true
