fix: Corrige configuração do NativeWind para funcionar com arquivos da pasta app
- Remove import direto do CSS global no _layout.tsx (conflitava com Metro bundler)
- Cria arquivos JavaScript paralelos para configuração do Tailwind (colors.js, font-family.js, font-size.js)
- Atualiza tailwind.config.js para usar imports corretos dos arquivos JS
- Adiciona polyfills necessários para React Native no Jest (setImmediate, clearImmediate)
- Configura variável EXPO_PUBLIC_ENV='jest' nos testes
- Adiciona .cursor/ ao .gitignore para evitar rastreamento de arquivos do IDE
-Melhora configuração do Metro e Jest para melhor compatibilidade

O NativeWind agora funciona corretamente em ambas as pastas (src/ e app/)

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "ios:release": "expo run:ios --configuration Release",
     "expo:check": "npx expo install --check",
     "expo:fix": "npx expo install --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" \".tests/**/*.{js,jsx,ts,tsx}\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" \"app/**/*.{js,jsx,ts,tsx}\"",
     "pre-push": "yarn tsc && yarn lint:fix && yarn lint && yarn test",
     "web": "expo start --web",
     "lint": "expo lint",
+    "lint:fix": "yarn format && yarn expo lint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -37,6 +38,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "expo": "~53.0.13",
+    "expo-constants": "^17.1.6",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.1",
@@ -64,16 +66,25 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
+    "@typescript-eslint/parser": "^8.35.0",
     "babel-loader": "^8.3.0",
     "eslint": "^9.29.0",
     "eslint-config-expo": "^9.2.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-define-config": "^2.1.0",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.3",
     "jest-expo": "^53.0.7",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "19.0.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
