--- a/package.json
+++ b/package.json
@@ -29,12 +29,18 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "i18n:extract": "lingui extract",
+    "i18n:compile": "lingui compile",
+    "i18n:extract-compile": "yarn i18n:extract && yarn i18n:compile",
     "reset": "rm -rf ios && rm -rf android && rm -rf node_modules && rm -rf .expo && rm -rf yarn.lock && rm -rf package-lock.json && watchman watch-del-all && rm -rf .yarn",
     "clear": "watchman watch-del-all && rm -rf ios && rm -rf android && rm -rf .expo",
     "clear:metro": "rm -rf /tmp/metro-cache && rm -rf node_modules/.cache"
   },
   "dependencies": {
     "@expo-google-fonts/quicksand": "^0.4.0",
+    "@lingui/core": "^5.3.2",
+    "@lingui/macro": "^5.3.2",
+    "@lingui/react": "^5.3.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "expo": "~53.0.13",
@@ -62,12 +68,15 @@
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@faker-js/faker": "^9.8.0",
+    "@lingui/cli": "^5.3.2",
+    "@lingui/loader": "^5.3.2",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^30.0.0",
     "@types/react": "^19.1.8",
     "@typescript-eslint/parser": "^8.35.0",
     "babel-loader": "^8.3.0",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^9.29.0",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^10.1.5",
