--- a/package.json
+++ b/package.json
@@ -1,100 +1,106 @@
 {
-  "name": "expo-boilerplate",
-  "main": "expo-router/entry",
-  "version": "1.0.0",
-  "engines": {
-    "node": ">=23",
-    "yarn": "1.22.X"
-  },
-  "scripts": {
-    "prebuild": "npx expo prebuild",
-    "start": "expo start --reset-cache",
-    "start:fast": "expo start",
-    "start:clean": "expo start 2>&1 | node scripts/filter-metro-warnings.js",
-    "android": "expo run:android",
-    "android:fast": "expo run:android --no-build-cache",
-    "android:clean": "cd android && ./gradlew clean && cd .. && expo run:android",
-    "android:release": "expo run:android --variant release",
-    "android:storybook": "EXPO_PUBLIC_STORYBOOK=true npx expo run:android",
-    "android:log": "adb logcat '*:S' ReactNative:V ReactNativeJS:V",
-    "ios": "expo run:ios",
-    "ios:release": "expo run:ios --configuration Release",
-    "expo:check": "npx expo install --check",
-    "expo:fix": "npx expo install --fix",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" \"app/**/*.{js,jsx,ts,tsx}\"",
-    "pre-push": "yarn tsc && yarn lint:fix && yarn lint && yarn test",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "lint:fix": "yarn format && yarn expo lint --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "i18n:extract": "lingui extract",
-    "i18n:compile": "lingui compile",
-    "i18n:extract-compile": "yarn i18n:extract && yarn i18n:compile",
-    "reset": "rm -rf ios && rm -rf android && rm -rf node_modules && rm -rf .expo && rm -rf yarn.lock && rm -rf package-lock.json && watchman watch-del-all && rm -rf .yarn",
-    "clear": "watchman watch-del-all && rm -rf ios && rm -rf android && rm -rf .expo",
-    "clear:metro": "rm -rf /tmp/metro-cache && rm -rf node_modules/.cache"
-  },
-  "dependencies": {
-    "@expo-google-fonts/quicksand": "^0.4.0",
-    "@lingui/core": "^5.3.2",
-    "@lingui/macro": "^5.3.2",
-    "@lingui/react": "^5.3.2",
-    "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.1",
-    "expo": "~53.0.13",
-    "expo-constants": "^17.1.6",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
-    "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
-    "nativewind": "^4.0.1",
-    "qs": "^6.11.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "^7.53.1",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "~0.20.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/plugin-transform-react-jsx": "^7.27.1",
-    "@faker-js/faker": "^9.8.0",
-    "@lingui/cli": "^5.3.2",
-    "@lingui/loader": "^5.3.2",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^13.2.0",
-    "@types/jest": "^30.0.0",
-    "@types/react": "^19.1.8",
-    "@typescript-eslint/parser": "^8.35.0",
-    "babel-loader": "^8.3.0",
-    "babel-plugin-macros": "^3.1.0",
-    "eslint": "^9.29.0",
-    "eslint-config-expo": "^9.2.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-define-config": "^2.1.0",
-    "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.1",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-unused-imports": "^4.1.4",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.3",
-    "jest-expo": "^53.0.7",
-    "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "react-native-svg-transformer": "^1.4.0",
-    "react-test-renderer": "19.0.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3"
-  },
-  "private": true
+    "name": "expo-boilerplate",
+    "main": "expo-router/entry",
+    "version": "1.0.0",
+    "engines": {
+        "node": ">=23",
+        "yarn": "1.22.X"
+    },
+    "scripts": {
+        "prebuild": "npx expo prebuild",
+        "start": "expo start --reset-cache",
+        "start:fast": "expo start",
+        "start:clean": "expo start 2>&1 | node scripts/filter-metro-warnings.js",
+        "android": "expo run:android",
+        "android:fast": "expo run:android --no-build-cache",
+        "android:clean": "cd android && ./gradlew clean && cd .. && expo run:android",
+        "android:release": "expo run:android --variant release",
+        "android:storybook": "EXPO_PUBLIC_STORYBOOK=true npx expo run:android",
+        "android:log": "adb logcat '*:S' ReactNative:V ReactNativeJS:V",
+        "ios": "expo run:ios",
+        "ios:release": "expo run:ios --configuration Release",
+        "expo:check": "npx expo install --check",
+        "expo:fix": "npx expo install --fix",
+        "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\" \"app/**/*.{js,jsx,ts,tsx}\"",
+        "pre-push": "yarn tsc && yarn lint:fix && yarn lint && yarn test",
+        "web": "expo start --web",
+        "lint": "expo lint",
+        "lint:fix": "yarn format && yarn expo lint --fix",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "i18n:extract": "lingui extract",
+        "i18n:compile": "lingui compile",
+        "i18n:extract-compile": "yarn i18n:extract && yarn i18n:compile",
+        "reset": "rm -rf ios && rm -rf android && rm -rf node_modules && rm -rf .expo && rm -rf yarn.lock && rm -rf package-lock.json && watchman watch-del-all && rm -rf .yarn",
+        "clear": "watchman watch-del-all && rm -rf ios && rm -rf android && rm -rf .expo",
+        "clear:metro": "rm -rf /tmp/metro-cache && rm -rf node_modules/.cache",
+        "prepare": "husky",
+        "commitlint": "commitlint --edit"
+    },
+    "dependencies": {
+        "@expo-google-fonts/quicksand": "^0.4.0",
+        "@lingui/core": "^5.3.2",
+        "@lingui/macro": "^5.3.2",
+        "@lingui/react": "^5.3.2",
+        "axios": "^1.9.0",
+        "class-variance-authority": "^0.7.1",
+        "expo": "~53.0.13",
+        "expo-constants": "^17.1.6",
+        "expo-font": "~13.3.1",
+        "expo-linking": "~7.1.5",
+        "expo-router": "~5.1.1",
+        "expo-splash-screen": "~0.30.9",
+        "expo-status-bar": "~2.2.3",
+        "nativewind": "^4.0.1",
+        "qs": "^6.11.2",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-hook-form": "^7.53.1",
+        "react-native": "0.79.4",
+        "react-native-gesture-handler": "^2.26.0",
+        "react-native-reanimated": "^3.18.0",
+        "react-native-safe-area-context": "5.4.0",
+        "react-native-screens": "~4.11.1",
+        "react-native-svg": "15.11.2",
+        "react-native-web": "~0.20.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/plugin-transform-react-jsx": "^7.27.1",
+        "@commitlint/cli": "^19.8.1",
+        "@commitlint/config-conventional": "^19.8.1",
+        "@faker-js/faker": "^9.8.0",
+        "@lingui/cli": "^5.3.2",
+        "@lingui/loader": "^5.3.2",
+        "@testing-library/jest-native": "^5.4.3",
+        "@testing-library/react-native": "^13.2.0",
+        "@types/jest": "^30.0.0",
+        "@types/react": "^19.1.8",
+        "@typescript-eslint/parser": "^8.35.0",
+        "babel-loader": "^8.3.0",
+        "babel-plugin-macros": "^3.1.0",
+        "eslint": "^9.29.0",
+        "eslint-config-expo": "^9.2.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-define-config": "^2.1.0",
+        "eslint-import-resolver-typescript": "^4.4.4",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-prettier": "^5.5.1",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-unused-imports": "^4.1.4",
+        "husky": "^9.1.7",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^30.0.3",
+        "jest-expo": "^53.0.7",
+        "lint-staged": "^16.1.2",
+        "prettier": "^3.6.2",
+        "prettier-plugin-tailwindcss": "^0.5.11",
+        "react-native-svg-transformer": "^1.4.0",
+        "react-test-renderer": "19.0.0",
+        "tailwindcss": "^3.4.17",
+        "typescript": "~5.8.3"
+    },
+    "private": true
 }
