feat: adicionar configuração automática de Git hooks
- Criar script setup-git-hooks.js para configuração automática
- Adicionar postinstall script para executar após yarn install
- Atualizar README com instruções de configuração automática
- Configurar hooks pre-commit, commit-msg e pre-push automaticamente
- Resolver problema de hooks não sendo copiados pelo create-expo-app
- Adicionar scripts/ aos ignores do ESLint

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "clear": "watchman watch-del-all && rm -rf ios && rm -rf android && rm -rf .expo",
         "clear:metro": "rm -rf /tmp/metro-cache && rm -rf node_modules/.cache",
         "prepare": "husky",
+        "postinstall": "node scripts/setup-git-hooks.js",
+        "setup-git-hooks": "node scripts/setup-git-hooks.js",
         "commitlint": "commitlint --edit"
     },
     "dependencies": {
