--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "react-native-screens": "~4.11.1",
         "react-native-svg": "15.12.0",
         "react-native-web": "~0.20.0",
+        "twrnc": "^4.9.1",
         "zod": "^3.23.8"
     },
     "devDependencies": {
