--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     },
     "dependencies": {
         "@expo-google-fonts/quicksand": "^0.4.0",
+        "@hookform/resolvers": "^5.1.1",
         "@lingui/core": "^5.3.2",
         "@lingui/macro": "^5.3.2",
         "@lingui/react": "^5.3.2",
+        "@tanstack/react-query": "^5.81.5",
+        "@tanstack/react-query-devtools": "^5.81.5",
         "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "expo": "~53.0.13",
@@ -59,16 +62,17 @@
         "qs": "^6.11.2",
         "react": "19.0.0",
         "react-dom": "19.0.0",
-        "react-hook-form": "^7.53.1",
+        "react-hook-form": "^7.59.0",
         "react-native": "0.79.4",
         "react-native-gesture-handler": "^2.26.0",
+        "react-native-mmkv": "^3.3.0",
         "react-native-reanimated": "^3.18.0",
         "react-native-safe-area-context": "5.5.0",
         "react-native-screens": "~4.11.1",
         "react-native-svg": "15.12.0",
         "react-native-web": "~0.20.0",
         "twrnc": "^4.9.1",
-        "zod": "^3.23.8"
+        "zod": "^3.25.67"
     },
     "devDependencies": {
         "@babel/core": "^7.25.2",
